[package]
name = "st"
version = "0.2.1"
authors = ["dev <dev@qiyutech.tech>"]
edition = "2018"
description = "Dev Super Tools! auto format & lint and more"
license = "AGPL"
homepage = "https://github.com/QiYuTechDev/st"

[[bin]]
name = "st"
path = "src/bins/main.rs"

[dependencies]
structopt = "0.3"

which = "4.0"

serde = { version = "1.0", features = ["derive"] }

toml = "0.5"

serde_json = "1.0"

